[OLINGO-659] Better data handling in technical service + clean-up
Signed-off-by: Michael Bolz <michael.bolz@sap.com>